--- a/access.html
+++ b/access.html
@@ -24,79 +24,86 @@
         </h1>
         <div class="t-wrap">
           <div class="t-head">
-            <ul class="list-day">
-              <li class="list-day-item">
-                <button type="button" aria-disabled="false">11/1 (Fri)</button>
-              </li>
-              <li class="list-day-item">
-                <button type="button" aria-disabled="true">11/2 (Sat)</button>
-              </li>
-              <li class="list-day-item">
-                <button type="button" aria-disabled="true">11/3 (Sun)</button>
-              </li>
-            </ul>
-            <ul class="list-search">
-              <li class="list-search-item">
-                <button type="button" aria-disabled="false">すべて</button>
-              </li>
-              <li class="list-search-item">
-                <button type="button" aria-disabled="true">観たい</button>
-              </li>
-              <li class="list-search-item">
-                <button type="button" aria-disabled="true">参加したい</button>
-              </li>
-              <li class="list-search-item">
-                <button type="button" aria-disabled="true">東館</button>
-              </li>
-              <li class="list-search-item">
-                <button type="button" aria-disabled="true">西館</button>
-              </li>
-            </ul>
           </div>
           <div class="t-body">
             <div class="t-content">
-              <div class="t-content-head">
-                <h2 class="t-content-ttl">11/1 (Fri)</h2>
+              <div class="t-column-wrap">
+                <div class="t-column-left">
+                  <p>10:00</p>
+                  <p>10:30</p>
+                  <p>11:00</p>
+                  <p>11:30</p>
+                  <p>12:00</p>
+                  <p>12:30</p>
+                  <p>13:00</p>
+                  <p>13:30</p>
+                  <p>14:00</p>
+                  <p>14:30</p>
+                  <p>15:00</p>
+                  <p>15:30</p>
+                  <p>16:00</p>
+                  <p>16:30</p>
+                  <p>17:00</p>
+                  <p>17:30</p>
+                  <p>18:00</p>
+                  <p>18:30</p>
+                </div>
+                <div class="t-column-right">
+
+                </div>
               </div>
-              <div class="t-content-body">
-                <div class="t-column-wrap">
-                  <div class="t-column-left">
-                    <p>10:00</p>
-                    <p>10:30</p>
-                    <p>11:00</p>
-                    <p>11:30</p>
-                    <p>12:00</p>
-                    <p>12:30</p>
-                    <p>13:00</p>
-                    <p>13:30</p>
-                    <p>14:00</p>
-                    <p>14:30</p>
-                    <p>15:00</p>
-                    <p>15:30</p>
-                    <p>16:00</p>
-                    <p>16:30</p>
-                    <p>17:00</p>
-                    <p>17:30</p>
-                    <p>18:00</p>
-                    <p>18:30</p>
-                    <p>19:00</p>
-                  </div>
-                  <div class="t-column-right">
-                    <div class="t-item" style="--start: 5; --duration: 2;">
-                      <a href="">
-                        <div class="t-item-inner">
-                          <div class="txtBox">
-                            <p class="head">
-                              <span>場所</span>
-                              <span>【団体名】</span>
-                            </p>
-                            <p class="schedule">00:00 ~ 00:00</p>
-                            <p class="ttl">タイトル</p>
-                          </div>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
+            </div>
+            <div class="t-content">
+              <div class="t-column-wrap">
+                <div class="t-column-left">
+                  <p>10:00</p>
+                  <p>10:30</p>
+                  <p>11:00</p>
+                  <p>11:30</p>
+                  <p>12:00</p>
+                  <p>12:30</p>
+                  <p>13:00</p>
+                  <p>13:30</p>
+                  <p>14:00</p>
+                  <p>14:30</p>
+                  <p>15:00</p>
+                  <p>15:30</p>
+                  <p>16:00</p>
+                  <p>16:30</p>
+                  <p>17:00</p>
+                  <p>17:30</p>
+                  <p>18:00</p>
+                  <p>18:30</p>
+                </div>
+                <div class="t-column-right">
+
+                </div>
+              </div>
+            </div>
+            <div class="t-content">
+              <div class="t-column-wrap">
+                <div class="t-column-left">
+                  <p>10:00</p>
+                  <p>10:30</p>
+                  <p>11:00</p>
+                  <p>11:30</p>
+                  <p>12:00</p>
+                  <p>12:30</p>
+                  <p>13:00</p>
+                  <p>13:30</p>
+                  <p>14:00</p>
+                  <p>14:30</p>
+                  <p>15:00</p>
+                  <p>15:30</p>
+                  <p>16:00</p>
+                  <p>16:30</p>
+                  <p>17:00</p>
+                  <p>17:30</p>
+                  <p>18:00</p>
+                  <p>18:30</p>
+                </div>
+                <div class="t-column-right">
+
                 </div>
               </div>
             </div>
